syntax = "proto3";

package endless.trash.forever;

option ruby_package = "So::Much::Trash";

import "google/api/client.proto";
import "google/api/resource.proto";

option (google.api.resource_definition) = {
  type: "resourcenames.example.com/SimplePatternNonParentResource"
  pattern: "locations/{location}"
};

option (google.api.resource_definition) = {
  type: "resourcenames.example.com/ComplexPatternNonParentResource"
  pattern: "orders/{order_a}~{order_b}"
};

option (google.api.resource_definition) = {
  type: "resourcenames.example.com/SimplePatternResource"
  pattern: "customers/{customer}"
};

option (google.api.resource_definition) = {
  type: "resourcenames.example.com/ComplexPatternResource"
  pattern: "customers/{customer}/items/{item_a_id}.{item_b_id}~{items_c_id}"
};

option (google.api.resource_definition) = {
  type: "resourcenames.example.com/ComplexPatternIntermediateResource"
  pattern: "customers/{customer}/items/{item_a_id}.{item_b_id}~{items_c_id}/details/{details_a_id}_{details_b_id}-{details_c_id}"
};

service ResourceNames {
  option (google.api.default_host) = "endlesstrash.example.net";

  rpc SimplePatternMethod(SimplePatternRequest) returns(Response) {
  }

  rpc ComplexPatternMethod(ComplexPatternRequest) returns(Response) {
  }
}

message SimplePatternRequest {
  option (google.api.resource) = {
    type: "resourcenames.example.com/SimplePatternRequest"
    pattern: "customers/{customer}/things/{thing}"
    name_field: "real_name"
  };

  string real_name = 1;
  string ref = 2 [(google.api.resource_reference).type = "resourcenames.example.com/SimplePatternResource"];
  repeated string repeated_ref = 3 [(google.api.resource_reference).type = "resourcenames.example.com/SimplePatternNonParentResource"];
}

message ComplexPatternRequest {
  option (google.api.resource) = {
    type: "resourcenames.example.com/ComplexPatternRequest"
    pattern: "customers/{customer}/items/{item_a_id}.{item_b_id}~{items_c_id}/details/{details_a_id}_{details_b_id}-{details_c_id}/extra/{extra_id}"
    pattern: "as/customers/{customer}/extras/{extra_id}"
    name_field: "real_name"
  };
  string real_name = 1;
  string ref = 2 [(google.api.resource_reference).type = "resourcenames.example.com/ComplexPatternResource"];
  repeated string repeated_ref = 3 [(google.api.resource_reference).type = "resourcenames.example.com/ComplexPatternNonParentResource"];
}

message Response { }
